result/HTML/autoclose3.html.err
./test/HTML/autoclose3.html:4: error: Opening and ending tag mismatch: body and ul

^
